--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "designSystemRdDoc",
   "version": "0.0.1",
-  "description": "Documentation componets design system rd",
+  "description": "Documentation componets design system rdssff",
   "main": "index.js",
   "authors": {
     "name": "Diana Raquel",
